--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^19.1.1",
     "react": "^19.1.1",
     "react-router-dom": "^7.8.1",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "recharts": "^2.12.7",
+    "tesseract.js": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
