--- a/package.json
+++ b/package.json
@@ -6,21 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "tsc --noEmit"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react": "^19.1.1",
     "react-router-dom": "^7.8.1",
+    "zustand": "^5.0.8",
     "recharts": "^2.12.7",
     "tesseract.js": "^5.0.5",
-    "zustand": "^5.0.8"
+    "@google/genai": "0.14.0",
+    "jszip": "3.10.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@types/react": "^19.1.11",
-    "@types/react-dom": "^19.1.7",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
